# forecasting-proto-1

./: .env.example  .gitignore  PROCESS.md  README.md  STATUS.md  WRITEUP.md  context.md  pyproject.toml
docs/: phd-trajectory.html  thesis-paths.html
notebooks/: _build_writeup.py  final_writeup.ipynb
scripts/: 00_gpu_setup.sh  01_test_credentials.py  02_download_one_date.py  03_download_all.py  04_run_forecasts.py  04b_ingest_aifs.py  05_compute_bias.py  06_make_plots.py  test_trim.py
src/monsoon_bias/: __init__.py  config.py
src/monsoon_bias/analysis/: __init__.py  bias.py  plots.py
src/monsoon_bias/data/: __init__.py  _earthdata.py  bsiso.py  elevation.py  era5.py  imerg.py
src/monsoon_bias/forecast/: __init__.py  _lexicon_patch.py  run_aifs.py  trim.py
src/monsoon_bias/processing/: __init__.py  accumulate.py  regrid.py  store.py
